<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TCPDUMP</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="startService">Start Service</string>
    <string name="stopService">Stop Service</string>
    <string name="notificationText">Network traffic is being collected!</string>
    <string name="notificationTitle">Tcpdump is running</string>
    <string name="read_file">Read File</string>
    <string name="packets_captured">Packets Captured</string>
    <string name="packet_number">Packet number:</string>
    <string name="layer_3">Network layer</string>
    <string name="network_protocol">Network Protocol:</string>
    <string name="network_src">IP Source Address:</string>
    <string name="network_dst">IP Dest. Address:</string>
    <string name="layer_4">Transport layer</string>
    <string name="transport_protocol">Transport Protocol:</string>
    <string name="transport_src">Source Port:</string>
    <string name="transport_dst">Dest. Port:</string>
    <string name="layer_5">Application Layer:</string>
    <string name="application_protocol">Application Protocol:</string>
    <string name="unknown">Unknown</string>
</resources>
